# modcc

./: Cargo.toml  test.txt  text.txt
src/: ff.rs  interpolation.rs  lagrange_interpolation.rs  main.rs  multilinear_interpolation.rs  multilinear_poly.rs  multilinear_view_helpers.rs  multivariate_interpolation.rs  multivariate_poly.rs  multivariate_view_helpers.rs  uni_poly.rs  univariate_poly.rs  univariate_view_helpers.rs
