[package]
name = "modcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6"
actix-web = "4"
serde ={ version = "1.0.204", features = ["derive"]}
serde_json = "1.0"
num-traits = "0.2"
num-bigint = "0.4"
num-integer = "0.1"
rand = "*"